[Add]いいね、コメント

--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -8,6 +8,7 @@
 
   <p>本文：<%= post_image.text%></p>
   <p>ユーザーネーム：<%= post_image.user.name %></p>
+    <p><%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id) %></p>
 </div>
 
 <% end %>
