--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -1,14 +1,15 @@
 <% @post_images.each do |post_image| %>
 <div>
   <%= link_to post_image_path(post_image.id) do %>
-    <%= attachment_image_tag post_image, :image %>
+    <%= attachment_image_tag post_image, :image, width: '50%', height: '50%' %>
   <% end %>
 
   <!--<p>投稿ユーザー画像：<%#= image_tag('sample-author1.jpg') %></p>-->
 
-  <p>本文：<%= post_image.text%></p>
-  <p>ユーザーネーム：<%= post_image.user.name %></p>
+  <p><%= post_image.text%></p>
+  <p>投稿者：<%= post_image.user.name %></p>
     <p><%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id) %></p>
 </div>
 
 <% end %>
+<%= paginate @post_images %>
