--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -1,15 +1,22 @@
 <% @post_images.each do |post_image| %>
+
 <div>
+  <p>投稿者：<%= post_image.user.name %></p>
+  <%# @users.each do |user| %>
+  <% if current_user.following?(@user) %>
+  <%= link_to "フォロー解除", user_relationships_path(@users), method: :delete %>
+  <% else %>
+  <%= link_to "フォローする", user_relationships_path(@users), method: :post %>
+  <% end %>
+  <%# end %>
+  <p><%= attachment_image_tag post_image.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %></p>
   <%= link_to post_image_path(post_image.id) do %>
     <%= attachment_image_tag post_image, :image, width: '50%', height: '50%' %>
   <% end %>
 
-  <!--<p>投稿ユーザー画像：<%#= image_tag('sample-author1.jpg') %></p>-->
-
   <p><%= post_image.text%></p>
-  <p>投稿者：<%= post_image.user.name %></p>
     <p><%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id) %></p>
 </div>
-
+<br>
 <% end %>
 <%= paginate @post_images %>
