--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,10 @@
       <%= link_to 'マイページ', user_path(current_user.id) %>
       </li>
 
+      <li>
+      <%= link_to 'タイムライン', post_images_path %>
+      </li>
+
     <% else %>
       <li>
         <%= link_to "新規登録", new_user_registration_path %>
