--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,3 +16,33 @@
 
 <%= link_to "投稿一覧", post_images_path %>
 </div>
+
+<% if current_user.following?(@user) %>
+  <%= link_to "フォロー解除", user_relationships_path(@user.id), method: :delete %>
+<% else %>
+  <%= link_to "フォローする", user_relationships_path(@user.id), method: :post %>
+<% end %>
+
+
+<h2>Follower Users</h2><h2>Follow Users</h2>
+<% if @users.exists? %>
+  <thead>
+    <tr>
+    <% @users.each do |user| %>
+      <th>name</th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+      <tr>
+        <td><%= user.name %></td>
+        <td>フォロー数: <%= user.followings.count %></td>
+        <td>フォロワー数: <%= user.followers.count %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<% else %>
+  <p>ユーザーはいません</p>
+<% end %>
