--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -1,6 +1,19 @@
 <% @post_images.each do |post_image| %>
 
 <div>
+  <%# unless current_user == @user %>
+  <% if current_user.following?(@user) %>
+    <%= form_for(current_user.relationships.find_by(follow_id: user.id), html: { method: :delete }) do |f| %>
+      <%= hidden_field_tag :follow_id, @user.id %>
+      <%= f.submit 'Unfollow', class: 'btn btn-danger btn-block' %>
+    <% end %>
+  <% else %>
+    <%= form_for(current_user.relationships.build) do |f| %>
+      <%= hidden_field_tag :follow_id, @user.id %>
+      <%= f.submit 'Follow' %>
+    <% end %>
+  <% end %>
+<%# end %>
   <p>投稿者：<%= post_image.user.name %></p>
   <%# @users.each do |user| %>
   <%# end %>
