--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -5,7 +5,7 @@
   <% if current_user.following?(@user) %>
     <%= form_for(current_user.relationships.find_by(follow_id: user.id), html: { method: :delete }) do |f| %>
       <%= hidden_field_tag :follow_id, @user.id %>
-      <%= f.submit 'Unfollow', class: 'btn btn-danger btn-block' %>
+      <%= f.submit 'Unfollow' %>
     <% end %>
   <% else %>
     <%= form_for(current_user.relationships.build) do |f| %>
