--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,10 +4,4 @@
 
 <%= user.name %>
 
-
-<% if current_user.following?(@user) %>
-  <%= link_to "フォロー解除", user_relationships_path(user.id), method: :delete %>
-<% else %>
-  <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
-<% end %>
-<% end %>
+<%= render '/users/index', users: @users %>
