--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,55 @@
 <h3>マイページ</h3>
-<br>
-<div class="text-center">
 
-<div class="profile-container">
-  <h3 class="profile-name"><%= @user.name %></h3>
+
+<div class="container">
+  <div class="row">
+  <div class="col-lg-2">
+
+   <div class="profile-container">
+
+   <h5 class="profile-name"><%= @user.name %></h5>
    <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
    <% if @user.id == current_user.id %>
-
   <br>
-
    <i class="fas fa-user-cog"><%= link_to "プロフィール編集", edit_user_path(@user) %></i>
   <% end %>
+  </div>
+  <br>
+
+  <div>
+   フォロー数: <%= @user.followings.count %>
+   <br>
+   フォロワー数: <%= @user.followers.count %>
+  </div>
+
+</div>
+
+ <div class="col-lg-10">
+<br>
+
+<div class="text-center">
+
+<% @post_images.each do |post_image| %>
+
+<div>
+  <%= link_to post_image_path(post_image.id) do %>
+    <%= attachment_image_tag post_image, :image, width: '50%', height: '50%' %>
+  <% end %>
+
+  <p><%= post_image.created_at.strftime('%Y/%m/%d') %></p>
+  <p><%= post_image.text%></p>
+  <p><%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id) %></p>
+
+</div>
+
+<br>
+<% end %>
+<%= paginate @post_images %>
+
+</div>
 </div>
 
 
-<%= link_to "投稿一覧", post_images_path %>
-</div>
 
+</div>
+</div>
