--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,7 @@
-<h1>landscape</h1>
-
 <!--サイトの説明-->
-風景の共有サイトです。
+<div style="position: relative; display:inline-block;">
+<%= image_tag '夕景.jpg.webp', width: '100%', height: '100%' %>
+<div style="position: absolute; top: 0; left: 0; max-width: 100%; max-height: 100%; padding: 30px; text-align: left;">
+<h1>landscape</h1>
+<p>画像の共有</p>
+</div></div>
