--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,9 @@
    フォロー数: <%= @user.followings.count %>
    <br>
    フォロワー数: <%= @user.followers.count %>
+
   </div>
+   <%= link_to "フォロー・フォロワー一覧", users_path %>
 
 </div>
 
