--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -1,13 +1,14 @@
 <div class="post-body">
 
-  
-  <%= attachment_image_tag @post_image, :image, width: '50%', height: '50%' %>
+  <p>
+  <%= attachment_image_tag @post_image.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %>
+  <%= @post_image.user.name %>
+  </p>
+  <%= attachment_image_tag @post_image, :image, width: '30%', height: '30%' %>
 
   <p><%= @post_image.text %></p>
 
-  <p>投稿者：<%= @post_image.user.name %></p>
-
-  <p>投稿日時：<%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
+  <p><%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
 
   <% if @post_image.user == current_user %>
     <%= link_to "削除", post_image_path(@post_image), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"} %>
