[Add]キーワード検索

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
           ログアウト<% destroy_user_session_path%>
         </a>
 
+        <!--<a class="fas fa-search nav-link" rel="nofollow" href="/post_images/search">検索<%# post_images_search_path%></a>-->
+
+
 
       <li>
       <%= link_to 'マイページ', user_path(current_user.id) %>
