--- a/app/views/post_images/search.html.erb
+++ b/app/views/post_images/search.html.erb
@@ -1,14 +1,5 @@
-<h6>検索</h6>
-<%= search_form_for @q, url: search_post_images_path do |f| %>
-  <%= f.label :text_cont, 'キーワード検索' %><br>
-  <%= f.search_field :text_cont %><br>
-  <br>
-  <%= f.submit '検索' %>
-<% end %>
-
-<br>
-<%#= render 'search', q: @q, url: post_images_search_path %>
-<% @post_images.each do |post_image| %>
+<h6>検索結果</h6>
+<% @results.each do |post_image| %>
 
 <div>
   <div>
@@ -28,6 +19,6 @@
 <br>
 <% end %>
 
+<%= link_to '投稿一覧へ戻る', post_images_path %>
 
 
-<%= paginate @post_images %>
