--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -7,5 +7,10 @@
   <h4>本文</h4>
   <%= f.text_area :text %>
 
+  <p>ハッシュタグ入力欄</p>
+  <%= f.text_area :hashbody, size:"55x3" %>
+
+<br>
+
   <%= f.submit '投稿' %>
 <% end %>
