--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -7,6 +7,7 @@
   <%= attachment_image_tag @post_image, :image, width: '30%', height: '30%' %>
 
   <p><%= @post_image.text %></p>
+  <%= render_with_hashtags(@post_image.hashbody) %>
 
   <p><%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
 
